# winappaudiorouter

./: .gitignore  CONTRIBUTING.md  MANIFEST.in  PYPI_RELEASE.md  README.md  app_audio_router.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml  publish.yml
docs/: api.rst  conf.py  index.rst  installation.rst  requirements.txt  usage.rst
src/winappaudiorouter/: __init__.py  cli.py  com.py  constants.py  device_ids.py  devices.py  errors.py  models.py  policy_config.py  router.py  sessions.py  winrt.py
tests/: test_cli.py  test_com_winrt.py  test_device_ids.py  test_device_matching.py  test_devices_sessions.py  test_entrypoints.py  test_policy_config.py  test_public_api.py  test_router.py
